assets/styles/app.scss
@use "sass:list";
@use "sass:map";
@import "../../vendor/twbs/bootstrap/scss/functions";

// Variables
$prefix: bs-;
$spacer: 0.8rem;
$primary: #4154f1;
$navbar-padding-x: 2rem;
$navbar-padding-y: $spacer * 0.85;
$input-btn-border-width: var(--#{$prefix}border-width);
$input-border-width: $input-btn-border-width;
$input-height-border: calc(#{$input-border-width} * 2);
$form-floating-height: add(3.5rem * 0.8, $input-height-border);
$form-floating-padding-y: 0.65rem;

$timeline-color: #808080;
$timeline-width: 2px;

@import "../../vendor/twbs/bootstrap/scss/bootstrap-reboot";
$font-family-sans-serif: list.join(
  ("LXGW WenKai TC", cursive),
  $font-family-sans-serif
);

@import "../../vendor/twbs/bootstrap/scss/bootstrap";

// global
html {
  font-size: 14px;
}

.app-footer {
  @extend .mt-5;

  &__links {
    display: inline;
    list-style: none;
    padding: 0;
    margin: 0;

    li {
      display: inline;
    }

    li:not(:last-child)::after {
      content: "｜";
    }

    li > a {
      color: inherit;
      text-decoration: none;
    }

    li > a:hover {
      span {
        text-decoration: underline;
      }
    }
  }
}

// utils
.v-center {
  height: 100vh;
  align-content: center;
}

.app-login {
  @extend .container-sm, .v-center;

  width: 75%;

  @media (min-width: map.get($container-max-widths, "lg")) {
    width: 60%;
  }

  @media (min-width: map.get($container-max-widths, "xl")) {
    width: 40%;
  }
}

// components
ul.credit {
  @extend .small;

  list-style: none;
  margin-bottom: 0;
  padding-left: 0;

  &__links {
    display: inline;
    list-style: none;
    padding: 0;
    margin: 0;

    li {
      display: inline;
    }

    li:not(:last-child)::after {
      content: "｜";
    }
  }
}

// overrides
.app-navbar {
  &__nav-area {
    @extend .d-flex,
      .flex-column,
      .flex-lg-row,
      .justify-content-start,
      .justify-content-lg-between,
      .align-items-start,
      .align-items-lg-center,
      .gap-2,
      .my-2,
      .ms-2;
    width: 100%;
  }

  &__item {
    @extend .px-3;
  }

  &__item > i {
    @extend .me-2;
  }

  &__item.active {
    @extend .rounded-pill, .px-4;
    margin-right: calc($spacer / 3);
    background-color: darken($light, 10%);
  }
}

.app-question-card {
  @extend .card;
  overflow: hidden;
  min-height: 14em;

  &__header {
    @extend .card-header;
  }

  &__main {
    @extend .card-body, .d-flex, .flex-column, .gap-2;
    overflow: hidden;
  }

  &__content {
    flex: 1;

    p {
      display: -webkit-box;
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  &__background {
    @extend .text-body-tertiary, .position-absolute;

    right: -12px;
    bottom: -10px;

    font-size: 6rem;
    line-height: 1;
    font-weight: lighter;

    opacity: 0.4;

    user-select: none;
  }

  &__operations {
    @extend .d-flex, .gap-3, .justify-content-start, .align-items-center;
  }

  &__pass-rate {
    &[data-pass-rate~="high"] {
      @extend .text-success;
    }
    &[data-pass-rate~="medium"] {
      @extend .text-warning;
    }
    &[data-pass-rate~="low"] {
      @extend .text-danger;
    }
  }
}

.app-challenge-header {
  &__title {
    font-weight: bold;
  }

  &__status[data-status~="solved"] {
    @extend .text-success;
  }

  &__status[data-status~="failed"] {
    @extend .text-danger;
  }

  &__status[data-status~="not-solved"] {
    @extend .opacity-75;
  }

  &__lists {
    @extend .list-inline;

    li {
      @extend .list-inline-item;
    }

    &__pass_rate {
      &__value {
        @extend .text-body;

        border-bottom: 1px dotted black;
        text-decoration: none;
      }
    }
  }
}

.app-challenge-result-event-presenter {
  table-layout: fixed;
}

.app-challenge-primary {
  min-height: 55vh;
}

.metric-card {
  @extend .px-5,
    .py-3,
    .d-flex,
    .justify-content-between,
    .align-items-center,
    .border,
    .border-2,
    .rounded-4;

  --bs-border-color: rgba(0, 0, 0, 0.1);

  &--is-positive {
    background:
      linear-gradient(133deg, rgba(255, 255, 255, 0.00) 20.4%, #ecfdf5 72.07%),
      #f8fafc;
  }

  &--is-negative {
    background:
      linear-gradient(133deg, rgba(255, 255, 255, 0.00) 20.4%, #fdecec 72.07%),
      #f8fafc;
  }

  &--is-neutral {
    background:
      linear-gradient(133deg, rgba(255, 255, 255, 0.00) 20.4%, #edecfd 72.07%),
      #f8fafc;
  }

  &__description {
    @extend .d-flex, .gap-2;

    &__title {
      font-size: 1.2em;
      font-weight: bold;
    }

    &__growth {
      @extend .badge, .rounded-pill;
      align-content: center;

      &--is-positive {
        @extend .bg-success;
      }

      &--is-negative {
        @extend .bg-danger;
      }

      &--is-neutral {
        @extend .bg-secondary;
      }
    }
  }

  &__value {
    font-size: 1.3em;
    font-weight: bold;
  }
}

.historic-statistics {
  &__events {
    &__row {
      &__time {
        font-weight: 600;
        min-width: 5em;
      }

      &__status {
        position: relative;

        &__text {
          @extend .p-2;

          position: relative;
          z-index: 2;
        }

        &::after {
          // vertical line at the center of element
          content: "";
          position: absolute;
          top: calc(-1em + 1px);
          left: 50%;
          transform: translateX(-50%);
          width: $timeline-width;
          height: calc(100% + $spacer * 2);
          background-color: $timeline-color;
        }

        &--first::before {
          // arrow at the top of element (↑)
          content: "";
          position: absolute;
          top: -1em;
          left: 50%;
          transform: translateX(-50%);
          width: 0;
          height: 0;
          border-left: 5px solid transparent;
          border-right: 5px solid transparent;
          border-bottom: 5px solid #808080;
        }
      }
    }
  }
}

.app-comments {
  border-left: $timeline-width solid $timeline-color;
  position: relative;
  list-style: none;

  &__item {
    position: relative;

    &::before {
      background-color: $timeline-color;

      position: absolute;
      display: block;
      top: 0.5em;

      $ball-size: 11px;

      // FIXME: 28px is calculated by Safari and
      // Chrome. I don't have idea why it is 28px.
      left: calc(-28px - $timeline-width / 2 - $ball-size / 2);
      border-radius: 50%;
      height: $ball-size;
      width: $ball-size;
      content: "";
    }
  }
}

.app-challenge-comment {
  &__main {
    transition: opacity 300ms;
  }
}

.app-overview-dashboard {
  display: grid;
  gap: 3rem;
  grid-template:
    "hello-text" auto
    "weekly-metrics" auto
    "historic-statistics" auto
    "leaderboard" auto;

  @media (min-width: 768px) {
    grid-template:
      "hello-text          hello-text          hello-text   hello-text" auto
      "weekly-metrics      weekly-metrics      leaderboard  leaderboard" 1fr
      "historic-statistics historic-statistics leaderboard  leaderboard" 1fr;
  }

  &__hello-text {
    grid-area: hello-text;
  }

  &__weekly-metrics {
    grid-area: weekly-metrics;
  }

  &__historic-statistics {
    grid-area: historic-statistics;
  }

  &__leaderboard {
    grid-area: leaderboard;
  }
}

